Support USB transfers from arbitrary threads in the new Linux backend.

DevTools relies on being able to issue USB transfers from an arbitrary
thread and have the callback run back on that thread. This is possible
in the libusb version but not the new native Linux version. This patch
adds the necessary thread hopping logic for that but only for bulk and
interrupt transfers as DevTools only uses those.

BUG=603434

Review-Url: https://codereview.chromium.org/1916053006
Cr-Commit-Position: refs/heads/master@{#390227}

Former-commit-id: 6aa3211e5f2b8a4bbe400e24d448d2ceb4c60115